working on margin alignment issues; scroll position working on smallest breakpoint

--- a/src/components/HeadLine/style.css
+++ b/src/components/HeadLine/style.css
@@ -3,6 +3,8 @@
   padding: 20px;
   color: #ffffff;
   background-color: #0c7664;
+  margin: 0px;
+  
 
 }
 
@@ -15,8 +17,11 @@
   } */
 
   .headline {
-    height: 120px;
-    padding-top: 70px;
+    height: 60px;
+    padding: 12px 20px 8px 20px;
+    font-size: 30px;
+
+    /* padding-top: 70px; */
   }
 
   /* .head-offset::before {
