--- a/src/components/saveStyle.css
+++ b/src/components/saveStyle.css
@@ -1,4 +1,3 @@
-
 html {
   scroll-behavior: smooth;
 }
@@ -9,26 +8,21 @@ body {
   min-height: 100%;
 }
 
-p {
-  padding: 10px;
-  margin-bottom: 0px;
-}
 
 #header {
-  /* height: 100px;
+  height: 100px;
   width: 100%;
   margin-left: -15px;
   margin-right: 0px;
   color: #ffffff;
-  background-color: #383838; */
+  background-color: #383838;
   display: none;
-  /* box-shadow: 0px 2px 5px 2px #909090; */
+  box-shadow: 0px 2px 5px 2px #909090;
 }
 
-/* .main-section {
+.main-section {
   padding-top: -2px;
-} */
-
+}
 /* .portfolio-section {
   padding-top: 50px;
 } */
@@ -331,21 +325,8 @@ a:focus {
 
   .main-section {
     position: absolute;
-    top: 60px;
+    top: 50px;
   }
-
-  :target::before {
-    content: "";
-    display: block;
-    height: 60px;
-    margin-top: -60px;
-  }
- 
-
-
- 
-  
-
 
   #header {
     position: fixed;
@@ -355,13 +336,8 @@ a:focus {
     width: 100%;
     display: block;
     padding: 20px 20px 20px 60px;
-    /* margin-left: -15px;
-    margin-right: 0px; */
     text-align: center;
     z-index: 2;
-    color: #ffffff;
-    background-color: #383838;
-    box-shadow: 0px 0px 3px 4px #000000;
   }
   /* burger button */
   #sidebar-toggle {
